--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ main {
     margin-top: 60px;
     border-radius: 33px;
     background: #e9edc9;
-    box-shadow:  -26px 26px 33px #c8ccad,
-                26px -26px 33px #ffffe5;
+    box-shadow:  -5px 5px 10px #5d5f50,
+                 5px -5px 10px #ffffff;
 }
 
 #display {
@@ -36,8 +36,8 @@ main {
     text-align: center;
     font-size: 30px;
     border-radius: 3px;
-    background: #e9edc9;
-    box-shadow: inset -2px 2px 33px #c8ccad
+    box-shadow: inset -5px 5px 10px #5d5f50,
+            inset 5px -5px 10px #ffffff;
             ;
 }
 
@@ -77,4 +77,14 @@ main {
 i {
   font-size: 2.5rem;
   cursor: pointer;
+}
+.blue{
+    background: #003566;
+    box-shadow: inset 26px 26px 45px #002e58,
+            inset -26px -26px 45px #003c74;
+}
+
+.bi-moon {
+    color: #003566;
+    color: #00203d;
 }
